--- a/turismo.html
+++ b/turismo.html
@@ -9,7 +9,21 @@
 
 </head>
 <body>
-
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Eco-Turismo</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+              <a class="nav-link" href="turismo.html">Turismo Sostenible</a>
+              <a class="nav-link" href="lugar.html">Localidades</a>
+            </div>
+          </div>
+        </div>
+      </nav>
     <div class="header">
         <h1>Villa General Belgrano</h1>
         <h2>Cuidado Ambiental para Turistas</h2>
@@ -25,9 +39,6 @@
                 <li>Valorar y preservar las tradiciones y costumbres locales, fomentando un intercambio cultural respetuoso.</li>
                 <li>Minimizar el consumo de recursos y reducir la generación de residuos.</li>
             </ul>
-        </div>
-        <div class="section">
-            <p>Busca minimizar el impacto ambiental y maximizar los beneficios para las comunidades locales. Al elegir esta forma de turismo, contribuyes a la preservación de los recursos naturales y culturales de Villa General Belgrano.</p>
         </div>
         <div class="section">
             <h2>Pequeños grandes gestos</h2>
