--- a/lugar.html
+++ b/lugar.html
@@ -9,7 +9,21 @@
     
 </head>
 <body>
-
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Eco-Turismo</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+              <a class="nav-link" href="turismo.html">Turismo Sostenible</a>
+              <a class="nav-link" href="lugar.html">Localidades</a>
+            </div>
+          </div>
+        </div>
+      </nav>
 <div class="container mt-5">
     <h1 class="text-center">Localidades Amigables con la Naturaleza en Córdoba</h1>
 
