--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="section">
             <h2>¿Cómo se puede ayudar?</h2>
             <p>Trata de colaborar haciendo un turismo sostenible, peeroo... ¿Qué es "Turismo sostenible"?</p>
-            <p><a href="turismo.html" class="link-success">Click Aquí</a></p>
+            <a type="button" href="turismo.html" class="btn btn-success">Click Aquí</a>
         </div>
     </div>
 
