--- a/turismo.html
+++ b/turismo.html
@@ -60,7 +60,7 @@
                 <li>Haz turismo responsable: Participa en actividades que no dañen el entorno, como senderismo en rutas marcadas y visitas a parques naturales con guías autorizados.</li>
                 <li>Limita tu huella de carbono: Considera compensar tus emisiones de carbono a través de programas que planten árboles o apoyen proyectos de energía renovable.</li>
                 <li>Comparte tu experiencia: Promueve el turismo sostenible en tus redes sociales o con tus conocidos, compartiendo buenas prácticas y recomendando lugares que lo fomenten.</li>
-                <li><a href="lugar.html" class="link-success">Lugares Turísticos</a></li>
+                <li><a type="button" href="lugar.html" class="btn btn-success">Localidades turísticas</a></li>
             </ul>
         </div>
     </div>
